fixed spacing about/projects/#top link

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -53,6 +53,7 @@ section {
   min-width: 280px;
   margin: 0 auto;
   text-align: center;
+  padding-top: 2rem;
   .section-heading{
     font-size: 2rem;
     font-weight: normal;
@@ -141,7 +142,7 @@ nav {
 
 .about__text{
   margin: 2.5rem 0;  
-  max-width: 800px;
+  max-width: 700px;
   text-align: left;
   // line-height: 1.4;
 }
@@ -204,6 +205,7 @@ nav {
 
 /* ============Projects==============*/
 .projects {
+  padding-top: 2rem;
   width: 100%;
   max-width: 1200px;
   text-align: center;
